--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     <nav aria-label="Primary Navigation">
           <p>Andylina Renzi</p>
       <ul>
-        <li><a href="Home.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -30,9 +30,9 @@
       <h1>Artist Bio</h1>
     <div class="Butons2">
     <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     </div>
 <!--====Images======-->
