--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav aria-label="Primary Navigation">
        <p>Andylina Renzi</p>
       <ul>
-        <li><a href="Home.html">Home </a></li>
-        <li><a href="About.html">About </a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="index.html">Home </a></li>
+        <li><a href="about.html">About </a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
