Updateing file names

--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -21,9 +21,9 @@
   <main>
       <div class="Butons">
       <ul>
-        <li><a href="Cartoons.html">Cartoons</a></li>
-        <li><a href="DigitalIllustrations.html">Digital Illistrations</a></li>
-        <li><a href="GraphicDesign.html">Graphic Design</a></li>
+        <li><a href="cartoons.html">Cartoons</a></li>
+        <li><a href="digitalIllustrations.html">Digital Illistrations</a></li>
+        <li><a href="graphicDesign.html">Graphic Design</a></li>
       </ul>
     </div>
 <!--=======Images=======-->
