--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
        </div>
 <!--=======Images Buttons========-->
 <section class="home-links"> 
-       <a href="Cartoons.html" class="home-buttons">
+       <a href="cartoons.html" class="home-buttons">
             <img src="images/GiraffeDeskJob.png" alt="Giraffe Desk Job" class="style-img">
            <strong>Cartoons</strong>
             </a>
 
-        <a href="DigitalIllustrations.html" class="home-buttons">
+        <a href="digitalIllustrations.html" class="home-buttons">
             <img src="images/RunUp.png" alt="Run Up" class="style-img">
             <strong> Illustrations</strong>
 </a>
-        <a href="GraphicDesign.html" class="home-buttons">
+        <a href="graphicDesign.html" class="home-buttons">
             <img src="images/PressioFont.png" alt="Pressio Font Poster" class="style-img">
              <strong>Graphic Design</strong>
           </a>
