updated file names

--- a/digitalillustrations.html
+++ b/digitalillustrations.html
@@ -23,8 +23,8 @@
     <div class="Butons">
       <ul>
         <li><a href="cartoons.html">Cartoons</a></li>
-        <li><a href="digitalIllustrations.html">Digital Illistrations</a></li>
-        <li><a href="graphicDesign.html">Graphic Design</a></li>
+        <li><a href="digitalillustrations.html">Digital Illistrations</a></li>
+        <li><a href="graphicdesign.html">Graphic Design</a></li>
       </ul>
     </div>
 <!--=======Images=======-->
