--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
            <strong>Cartoons</strong>
             </a>
 
-        <a href="digitalIllustrations.html" class="home-buttons">
+        <a href="digitalillustrations.html" class="home-buttons">
             <img src="images/RunUp.png" alt="Run Up" class="style-img">
             <strong> Illustrations</strong>
 </a>
-        <a href="graphicDesign.html" class="home-buttons">
+        <a href="graphicdesign.html" class="home-buttons">
             <img src="images/PressioFont.png" alt="Pressio Font Poster" class="style-img">
              <strong>Graphic Design</strong>
           </a>
